# statewave-bench

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RESULTS.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
scripts/: aggregate_runs.py  budget_sweep.py  honcho_rescore.py
src/statewave_bench/: __init__.py  cli.py  cost.py  coverage.py  dataset.py  llm.py  metadata.py  metrics.py  modes.py  report.py  runner.py
src/statewave_bench/systems/: base.py  mem0.py  naive.py  no_memory.py  statewave.py  zep.py
tests/: test_metrics.py  test_publication_safety.py
